test/zinc_source/compile_errors/annotations/06_meta_literal_rejected.zn
// expected-error: meta\(\) expects a symbol, field, method, type, or enum variant

fn main() {
    print(meta(123).name)
}
